--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Meta description pour SEO -->
   <meta name="description" content="Cours particuliers avec COUABO EVLE AUGUSTE, prof particulier, soutien scolaire et formations." />
   
-  <title>Cours particuliers - COUABO EVLE AUGUSTE</title>
+  <title>Cours particuliers et ressources éducatives pour tous</title>
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JM4PLX0DGZ"></script>
